#1053, improved sitemap look
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1594 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-full/src/main/message_keys/messages_en.properties
+++ b/portal-full/src/main/message_keys/messages_en.properties
@@ -53,6 +53,7 @@ NoScript_t=To make optimal use of this website you need to have JavaScript activ
 StrorylineCredits_t=Storyline and credits
 CheckTheFaqs_t=Check the FAQs - they may cover your feedback
 Communities_t=Communities
+Collections_t=Collections
 Partners_t=Partners
 Timeline_t=Timeline
 ThoughtLab_t=Thought lab
