collectiewijzer specefieke naam wijzigingen voor dc velden

--- a/portal-lite/src/main/message_keys/messages_nl.properties
+++ b/portal-lite/src/main/message_keys/messages_nl.properties
@@ -218,7 +218,7 @@ spanish_t=Spaans (spa)
 icelandic_t=IJslands (ijs)
 swedish_t=Zweeds (zwe)
 other_t=Overig
-dcterms_alternative_t=Titel
+dcterms_alternative_t=Alternatieve titel
 dcterms_provenance_t=Herkomst
 dcterms_isPartOf_t=Is deel van
 dcterms_hasPart_t=Is onderdeel
@@ -233,20 +233,20 @@ dcterms_isFormatOf_t=Is formaat van
 dcterms_spatial_t=Ruimtelijke dekking
 dcterms_temporal_t=Temporele dekking
 dc_title_t=Titel
-dc_creator_t=Auteur
-dc_contributor_t=Mede-auteur
-dc_coverage_t=Dekking
-dc_date_t=Datum
+dc_creator_t=Vervaardiger
+dc_contributor_t=Participerende instelling
+dc_coverage_t=Herkomst
+dc_date_t=Vervaardigingsdatum
 dc_format_t=Formaat
 dc_subject_t=Onderwerp
 dc_description_t=Beschrijving
-dc_publisher_t=Uitgever
-dc_identifier_t=Identificatie
+dc_publisher_t=Collectie
+dc_identifier_t=Objectnummer
 dc_source_t=Bron
 dc_language_t=Taal
-dc_relation_t=Relatie
+dc_relation_t=Verwijzing(en), verwant(e) object(en)
 dc_rights_t=Rechten
-dc_type_t=Type
+dc_type_t=Soort object
 austria_t=Oosterijk
 croatia_t=Croatië
 denmark_t=Denemarken
