Creator_t replaced by dc_creator_t in fulldoc. and translation updated

--- a/portal-lite/src/main/message_keys/messages_nl.properties
+++ b/portal-lite/src/main/message_keys/messages_nl.properties
@@ -147,7 +147,7 @@ ViewInOriginalContext_t=Bekijk in oorspronkelijke context
 Provider_t=Provider
 Title_t=Titel
 Description_t=Omschrijving
-Creator_t=Auteur
+Creator_t=Vervaardiger
 Date_t=Datum
 Subject_t=Onderwerp
 ShowAll_t=Toon alles
