--- a/portal-lite/src/main/message_keys/messages_nl.properties
+++ b/portal-lite/src/main/message_keys/messages_nl.properties
@@ -144,7 +144,7 @@ ViewWithLabels_t=Bekijk met labels
 ViewWithoutLabels_t=Bekijk zonder labels
 OpensInNewWindow_t=Opent in een nieuw venster
 ViewInOriginalContext_t=Bekijk in oorspronkelijke context
-Provider_t=Provider
+Provider_t=Aanbieder
 Title_t=Titel
 Description_t=Omschrijving
 Creator_t=Vervaardiger
