--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -97,7 +97,7 @@ SaveThisSearch_t=Bewaar deze zoekopdracht
 SearchSaved_t=Zoekopdracht bewaard
 SearchSavedFailed_t=Zoekopdracht opslaan mislukt
 YouHaveSearchFor_t=U heeft gezocht naar
-MatchesFor_t=Matches voor
+MatchesFor_t=Resultaten voor
 ViewingRelatedItems_t=U bekijkt gerelateerde items
 All_t=Alle
 Texts_t=Teksten
@@ -144,10 +144,10 @@ ViewWithLabels_t=Bekijk met labels
 ViewWithoutLabels_t=Bekijk zonder labels
 OpensInNewWindow_t=Opent in een nieuw venster
 ViewInOriginalContext_t=Bekijk in oorspronkelijke context
-Provider_t=Aanbieder
+Provider_t=Provider
 Title_t=Titel
 Description_t=Omschrijving
-Creator_t=Vervaardiger
+Creator_t=Auteur
 Date_t=Datum
 Subject_t=Onderwerp
 ShowAll_t=Toon alles
@@ -218,7 +218,7 @@ spanish_t=Spaans (spa)
 icelandic_t=IJslands (ijs)
 swedish_t=Zweeds (zwe)
 other_t=Overig
-dcterms_alternative_t=Alternatieve titel
+dcterms_alternative_t=Titel
 dcterms_provenance_t=Herkomst
 dcterms_isPartOf_t=Is deel van
 dcterms_hasPart_t=Is onderdeel
@@ -233,20 +233,20 @@ dcterms_isFormatOf_t=Is formaat van
 dcterms_spatial_t=Ruimtelijke dekking
 dcterms_temporal_t=Temporele dekking
 dc_title_t=Titel
-dc_creator_t=Vervaardiger
-dc_contributor_t=Participerende instelling
-dc_coverage_t=Herkomst
-dc_date_t=Vervaardigingsdatum
+dc_creator_t=Auteur
+dc_contributor_t=Mede-auteur
+dc_coverage_t=Dekking
+dc_date_t=Datum
 dc_format_t=Formaat
 dc_subject_t=Onderwerp
 dc_description_t=Beschrijving
-dc_publisher_t=Collectie
-dc_identifier_t=Objectnummer
+dc_publisher_t=Uitgever
+dc_identifier_t=Identificatie
 dc_source_t=Bron
 dc_language_t=Taal
-dc_relation_t=Verwijzing(en), verwant(e) object(en)
+dc_relation_t=Relatie
 dc_rights_t=Rechten
-dc_type_t=Soort object
+dc_type_t=Type
 austria_t=Oosterijk
 croatia_t=Croatië
 denmark_t=Denemarken
