updated jquery ui css, changed "matches" term in messages.nl file, index and briefdoc

--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -97,7 +97,7 @@ SaveThisSearch_t=Bewaar deze zoekopdracht
 SearchSaved_t=Zoekopdracht bewaard
 SearchSavedFailed_t=Zoekopdracht opslaan mislukt
 YouHaveSearchFor_t=U heeft gezocht naar
-MatchesFor_t=Resultaten voor
+MatchesFor_t=Zoekresultaten voor
 ViewingRelatedItems_t=U bekijkt gerelateerde items
 All_t=Alle
 Texts_t=Teksten
