rijksstijl updates. Added portal.color to launch_cw.properties file to load proper jquery.ui color directory (azure and brown -added to the css). Translation tag updates. Controller updates to reflect launch_cw.properties change MyEuropeana styling

--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -89,7 +89,7 @@ RefineYourSearch_t=Verfijn je zoekopdracht
 ByLanguage_t=Per taal
 ByCountry_t=Per land
 Bydate_t=Per datum
-ByProvider_t=Per provider
+ByProvider_t=Per aanbieder
 ByUserTag_t=Per gebruikers tag
 Bytype_t=Per type
 Actions_t=Acties
@@ -144,7 +144,7 @@ ViewWithLabels_t=Bekijk met labels
 ViewWithoutLabels_t=Bekijk zonder labels
 OpensInNewWindow_t=Opent in een nieuw venster
 ViewInOriginalContext_t=Bekijk in oorspronkelijke context
-Provider_t=Provider
+Provider_t=Aanbieder
 Title_t=Titel
 Description_t=Omschrijving
 Creator_t=Auteur
@@ -230,23 +230,23 @@ dcterms_conformsTo_t=Voldoet aan
 dcterms_requires_t=Vereist
 dcterms_hasFormat_t=Heeft formaat
 dcterms_isFormatOf_t=Is formaat van
-dcterms_spatial_t=Ruimtelijke dekking
-dcterms_temporal_t=Temporele dekking
+dcterms_spatial_t=Plaats van vervaardiging
+dcterms_temporal_t=Periode
 dc_title_t=Titel
-dc_creator_t=Auteur
-dc_contributor_t=Mede-auteur
-dc_coverage_t=Dekking
-dc_date_t=Datum
+dc_creator_t=Vervaardiger
+dc_contributor_t=Met bijdrage van
+dc_coverage_t=Herkomst
+dc_date_t=Vervaardigingsdatum
 dc_format_t=Formaat
-dc_subject_t=Onderwerp
+dc_subject_t=Trefwoorden
 dc_description_t=Beschrijving
 dc_publisher_t=Uitgever
 dc_identifier_t=Identificatie
 dc_source_t=Bron
 dc_language_t=Taal
-dc_relation_t=Relatie
+dc_relation_t=Verwijzing(en)
 dc_rights_t=Rechten
-dc_type_t=Type
+dc_type_t=Soort object
 austria_t=Oosterijk
 croatia_t=Croatië
 denmark_t=Denemarken
