briefdoc facet list styling, fulldoc related content table styling some translation changes/additions

--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -85,13 +85,14 @@ Contacts_t=Contact
 FundedBy_t=mede gefinancierd door de Europese Unie
 AltLogoEuropeana_t=logo Europeana denk cultuur
 AltHome_t=Klik hier om terug te keren naar de Europeana homepage
-RefineYourSearch_t=Verfijn je zoekopdracht
+RefineYourSearch_t=Zoekopdracht verfijnen
 ByLanguage_t=Per taal
 ByCountry_t=Per land
 Bydate_t=Per datum
+ByYear_t=Per jaar
 ByProvider_t=Per aanbieder
 ByUserTag_t=Per gebruikers tag
-Bytype_t=Per type
+Bytype_t=Per soort object
 Actions_t=Acties
 SaveThisSearch_t=Bewaar deze zoekopdracht
 SearchSaved_t=Zoekopdracht bewaard
