rijkstijling myeuropeana, added some dummy tags fulldoc administrationpage portal.color added to context new translations

--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -120,7 +120,7 @@ AltMoreInfo_t=Klik voor meer informatie
 NoItemsFound_t=Geen items gevonden
 RelatedContent_t=Gerelateerde content
 SeeAllRelatedItems_t=Bekijk alle gerelateerde items
-UserTags_t=Gebruikerstag
+UserTags_t=Gebruikerstag(s)
 AddATag_t=Voeg een tag toe
 Add_t=Toevoegen
 TagAdded_t=Tags toevoegen
@@ -293,3 +293,4 @@ sweden_t=Zweden
 liechtenstein_t=Liechtenstein
 luxembourg_t=Luxemburg
 greece_t=Griekenland
+Erase_t=Wissen
