cw functionality copied to default theme

--- a/portal/src/main/message_keys/messages_en.properties
+++ b/portal/src/main/message_keys/messages_en.properties
@@ -96,6 +96,7 @@ Bydate_t=By date
 ByProvider_t=By provider
 ByUserTag_t=By user tag
 Bytype_t=By type
+ByCollection_t=By collection
 Actions_t=Actions
 SaveThisSearch_t=Save this search
 SearchSaved_t=Search saved
