--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -93,6 +93,7 @@ ByYear_t=Per jaar
 ByProvider_t=Per aanbieder
 ByUserTag_t=Per gebruikers tag
 Bytype_t=Per soort object
+ByCollection_t=Per collectie
 Actions_t=Acties
 SaveThisSearch_t=Bewaar deze zoekopdracht
 SearchSaved_t=Zoekopdracht bewaard
